src/test/deca/context/valid/void_method.deca
class A extends Objects{
void method(){
}
}