src/test/deca/context/invalid/triple_decl_method_diff_class.deca
class A {
A fct(){
}
}
class B extends A {
B fct(){
}
}
class C extends B {
A fct(){
}
}